--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.freddieapp.freeapp.helper.accessibility.livenesssdk'
+    namespace 'com.izilab.livenessdemo'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.freddieapp.freeapp.helper.accessibility.livenesssdk"
+        applicationId "com.izilab.livenessdemo"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -17,10 +17,26 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        debug {
+            storeFile file("livedemo.jks")
+            storePassword "livedemo"
+            keyAlias "livedemo"
+            keyPassword "livedemo"
+        }
+        release {
+            storeFile file("livedemo.jks")
+            storePassword "livedemo"
+            keyAlias "livedemo"
+            keyPassword "livedemo"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -35,14 +51,24 @@ android {
     }
 }
 
-dependencies {
 
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation files('libs/iziliveness.aar')
+    def camerax_version = "1.2.0-alpha04"
+    implementation 'com.google.mlkit:face-detection:16.1.5'
+    implementation("androidx.camera:camera-core:${camerax_version}")
+    implementation("androidx.camera:camera-camera2:${camerax_version}")
+    implementation("androidx.camera:camera-lifecycle:${camerax_version}")
+    implementation("androidx.camera:camera-view:${camerax_version}")
+    implementation("androidx.camera:camera-mlkit-vision:${camerax_version}")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
