--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.izilab.livenessdemo">
+
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +17,7 @@
         android:theme="@style/Theme.LivenessSDK"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LivenessDemoActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.LivenessSDK.NoActionBar">
@@ -23,10 +27,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
+
+        <activity
+            android:name=".DetectionSuccessActivity"
+            android:exported="true"
+            android:theme="@style/Theme.LivenessSDK.NoActionBar"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
